--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Lucky Personal Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Daniel Flores Resume" />
+    <meta name="description" content="Lucky Ardhika Resume" />
     <meta name="keywords" content="Material CV, portfolio" />
     <meta name="author" content="luckyard110" />
     <link rel="shortcut icon" href="Personal_Logo_V1.5.ico">
@@ -85,7 +85,7 @@
                 <img src="images/main.jpg" alt="image">
             </a>
           </div>
-          <div class="mobile-site-title"><a href="#">Daniel Flores</a></div>
+          <div class="mobile-site-title"><a href="#">Lucky Ardhika</a></div>
          </div>
 
         <a class="menu-toggle mobile-visible">
