Adding PPOB Projects

--- a/index.html
+++ b/index.html
@@ -519,6 +519,18 @@
                             <span class="category">HTML, CSS, JavaScript + PWA Featured</span>
                           </figure>
 
+<!-- 		UNFINISHED PROJECTS		 -->
+			   <figure class="item standard" data-groups='["category_all", "category_crud"]'>
+                            <div class="portfolio-item-img">
+                              <img src="images/portfolio/MitragenLogo.png" alt="PPOB Apps" title="Unfinished Private PPOB Apps with MERN Stack Development" />
+                              <a href="https://github.com/LuckyArd110/Mitragen" target="_blank" title="Simple Web Page"></a>
+                            </div>
+
+                            <i class="fa fa-file-alt"></i>
+                            <h4 class="name">Unfinished PPOB Apps With MERN Stack Development. Service worker ON + PWA + Push Notification</h4>
+                            <span class="category">HTML, CSS, JavaScript, ReactJS, MongoDB, NodeJS, ExpressJS</span>
+                          </figure>
+				
                           <figure class="item standard" data-groups='["category_all", "category_page"]'>
                             <div class="portfolio-item-img">
                               <img src="images/portfolio/lp-ardevid.png" alt="Static Page" title="SImple Web Page" />
