--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
+    <meta name="google-site-verification" content="dPn2k5BVAcJ4-QHqAg_UR2fgHgF0uxe30o9OmRTRxvc" />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Lucky Personal Site</title>
