--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Lucky Personal Site</title>
+    <title>Lucky Ardhika Personal Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Lucky Ardhika Resume" />
     <meta name="keywords" content="Material CV, portfolio" />
@@ -37,7 +37,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content clearfix">
           <div class="my-photo">
-            <img src="images/main.jpg" alt="image">
+            <img src="images/main.jpg" alt="Lucky Ardhika Images">
           </div>
 
           <div class="site-title-block">
