--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 <!-- 		UNFINISHED PROJECTS		 -->
 			   <figure class="item standard" data-groups='["category_all", "category_crud"]'>
                             <div class="portfolio-item-img">
-                              <img src="images/portfolio/MitragenLogo.svg" alt="PPOB Apps" title="Unfinished Private PPOB Apps with MERN Stack Development" />
+                              <img src="images/portfolio/MitragenFront.jpg" alt="PPOB Apps" title="Unfinished Private PPOB Apps with MERN Stack Development" />
                               <a href="https://github.com/LuckyArd110/Mitragen" target="_blank" title="Simple Web Page"></a>
                             </div>
 
