Create Binance Coin Watcher

--- a/index.html
+++ b/index.html
@@ -524,11 +524,23 @@
                             <span class="category">HTML, CSS, JavaScript + PWA Featured</span>
                           </figure>
 
-<!-- 		UNFINISHED PROJECTS		 -->
-			   <figure class="item standard" data-groups='["category_all", "category_crud"]'>
+<!-- 		Finished Binance coin watcher PROJECTS		 -->
+			   <figure class="item standard" data-groups='["category_all"]'>
+                            <div class="portfolio-item-img">
+                              <img src="images/portfolio/Bivowatch.jpg" alt="BICOWATCH" title="Binance coin watcher BETA - Desktop Only" />
+                              <a href="https://github.com/LuckyArd110/BinanceCoinWatcher" target="_blank" title="Simple Web Page"></a>
+                            </div>
+
+                            <i class="fa fa-file-alt"></i>
+                            <h4 class="name">Binance coin watcher Beta (desktop ver): (Bloated socket for mobile browser)</h4>
+                            <span class="category">HTML, Bootstrap, JavaScript</span>
+                          </figure>
+			
+				
+			<figure class="item standard" data-groups='["category_all", "category_crud"]'>
                             <div class="portfolio-item-img">
                               <img src="images/portfolio/MitragenFront.jpg" alt="PPOB Apps" title="Unfinished Private PPOB Apps with MERN Stack Development" />
-                              <a href="https://github.com/LuckyArd110/Mitragen" target="_blank" title="Simple Web Page"></a>
+                              <a href="https://mitragen.herokuapp.com" target="_blank" title="Simple Web Page"></a>
                             </div>
 
                             <i class="fa fa-file-alt"></i>
