--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <!-- / Social Links -->
 
           <!-- Copyrights -->
-          <div class="copyrights">© 2021 All rights reserved.</div>
+          <div class="copyrights">© 2025 All rights reserved.</div>
           <!-- / Copyrights -->
         </div>
       </header>
@@ -147,7 +147,7 @@
                           <!-- /Text rotation / Subtitle -->
 
 			  <h2 class="hp-main-title">Lucky Ardhika</h2>
-                          <p>Hi, my name is Lucky Ardhika, I'm currently living in Gunungkidul, Yogyakarta; I'm 17 years; In my free time, I like to study about new programming languages, do some programming, play video games and much more.</p><p>Currently, I finished some personal projects to learn more about MERN (MongoDB, ExpressJS, ReactJS, NodeJS) and Mysql, the 2021 trend programming properties. You can see some of these projects on the portfolio page which is equipped with some brief descriptions about them.</p>
+                          <p>Hi, my name is Lucky Ardhika, I'm currently living in Gunungkidul, Yogyakarta; I'm 21 years; In my free time, I like to study about new programming languages, do some programming, play video games and much more.</p><p>An experienced Full-Stack Developer specializing in building robust and scalable web applications. I am proficient in developing end-to-end solutions, leveraging modern technologies like Node.js (NestJS, ExpressJS) for the backend and ReactJS or VueJS with TailwindCSS for the frontend. My expertise includes both SQL (PostgreSQL) and NoSQL (MongoDB) databases, with a strong command of TypeScript and Git for clean code and efficient version control. Explore my projects below to see my work in action.</p>
                           <div class="hp-buttons">
                             <a href="Documents/LuckyArdhika-newCVSimplified2.pdf" target="_blank" class="btn btn-primary">Download CV</a>
                           </div>
