--- a/index.html
+++ b/index.html
@@ -457,7 +457,39 @@
 
                         <!-- Portfolio Grid -->
                         <div class="portfolio-grid three-columns">
-                          
+                          <figure class="item standard" data-groups='["category_all", "category_crud"]'>
+                            <div class="portfolio-item-img">  
+                              <img src="images/portfolio/konek-mobile.png" alt="Konek" title="Konek is a donation platform" />
+                              <a href="https://play.google.com/store/apps/details?id=com.ekasatechnology.kcom&hl=id" target="_blank"  title="App"></a>
+                            </div>
+
+                            <i class="fa fa-file-alt"></i>
+                            <h4 class="name">Konek API for Mobile</h4>
+                            <span class="category">Typescript, NestJS, PostgreSQL, TypeORM</span>
+                          </figure>
+
+			  <figure class="item standard" data-groups='["category_all", "category_crud"]'>
+                            <div class="portfolio-item-img">  
+                              <img src="images/portfolio/barge-tracker.png" alt="BargeTracker" title="Barge Tracker for Ekasa Internal Operation" />
+                              <a href="" target="_blank" title="Private Url"></a>
+                            </div>
+
+                            <i class="fa fa-file-alt"></i>
+                            <h4 class="name">Barge Tracker</h4>
+                            <span class="category">Typescript, NestJS, PostgreSQL, TypeORM, VueJS, Element Plus</span>
+                          </figure>
+
+			  <figure class="item standard" data-groups='["category_all", "category_crud"]'>
+                            <div class="portfolio-item-img">  
+                              <img src="images/portfolio/online-order.png" alt="OnlineOrder" title="A platform to digitalize onsite ordering" />
+                              <a href="" target="_blank" title="Private Url"></a>
+                            </div>
+
+                            <i class="fa fa-file-alt"></i>
+                            <h4 class="name">Online Order for Modern Resto</h4>
+                            <span class="category">Typescript, VueJS, TailwindCSS</span>
+                          </figure>
+				
                           <figure class="item standard" data-groups='["category_all", "category_crud"]'>
                             <div class="portfolio-item-img">  
                               <img src="images/portfolio/mynotes.png" alt="Notes Project" title="MyNotes Project" />
